Attempt to fix nav on mobile

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -207,10 +207,8 @@ input[type=submit]:hover {
 
 @media all and (max-width: 750px) {
 	.navigation-list {
-		list-style-type: none;
-		margin: 0;
-		padding: 0;
-		width: 200px;
+		display: block;
+		padding: 12px;
 	}
 }
 
